css for filler table

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -9,11 +9,13 @@
         <header>
             <span>Web Route</span>
         </header>
-        <table id="table">
-            <tr><th>Filler</th><th>Filler</th></tr>
-            <tr><td>Filler</td><td>Filler</td></tr>
-            <tr><td>Filler</td><td>Filler</td></tr>
-            <tr><td>Filler</td><td>Filler</td></tr>
-        </table>
+        <div>
+            <table id="table">
+                <tr><th>Filler</th><th>Filler</th></tr>
+                <tr><td>Filler</td><td>Filler</td></tr>
+                <tr><td>Filler</td><td>Filler</td></tr>
+                <tr><td>Filler</td><td>Filler</td></tr>
+            </table>
+        </div>
     </body>
 </html>
