form to post method

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -16,6 +16,11 @@
                 <tr><td>Filler</td><td>Filler</td></tr>
                 <tr><td>Filler</td><td>Filler</td></tr>
             </table>
+            <form method="POST">
+                <input class="input-name" type="text" name="name" placeholder="Name" required>
+                <input type="submit" name="login" class="login-form-btn" value="login">
+            </form>
         </div>
+
     </body>
 </html>
