--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="table.css">
         <title>Web Route</title>
     </head>
     <body>
